[package]
name = "asmr"
version = "0.1.0"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"
lazy_static = "1.4.0"
hex-literal = "0.3.1"
hex = "0.4.2"
enum-utils = "0.1.1"
enum_dispatch = "0.3.2"
anyhow = "1.0.32"
futures = "0.3.5"
tokio = { version = "0.2.6", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.16"
rand = { version = "0.7.3", features = ["std"] }
bigint = "4.4.3"
digest = "0.9.0"
sha2 = "0.9.1"
blake2 = "0.9.0"
rust-argon2 = "0.8.2"
secp256kfun = { version = "0.1.5", features = ["serialization"] }
curve25519-dalek = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
derive_more = "0.99.9"
bincode = "1.3.1"
serde_json = "1.0.56"
reqwest = { version = "0.10.6", features = ["json"] }
bitcoin = "0.23.0"
nanocurrency-types = "0.3.19"
num_cpus = "1.13.0"
monero = "0.8.1"
digest_auth = "0.2.3"

[features]
no_confs = []
test_bitcoin_node = []
test_meros_node = []
test_nano_node = []
test_monero_node = []

# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3
