[package]
name = "asmr"
version = "0.1.0"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.7"
futures = "0.3.17"
enum-utils = "0.1.2"
once_cell = "1.8.0"
enum_dispatch = "0.3.7"
derive_more = "0.99.16"
lazy_static = "1.4.0"
hex-literal = "0.3.3"

rand_core = "0.6"
rand = "0.8"
digest = "0.9.0"
sha2 = "0.9.8"
blake2 = "0.9.2"

secp256kfun = { version = "0.6", default-features = false, features = ["serde"] }
curve25519-dalek = { version = "3.2.0", features = ["serde"] }
ff = "0.10"
group = "0.10"
jubjub = "0.7"
dleq = { git = "https://github.com/kayabaNerve/dleq-rs", rev = "263de6f", features = ["dalek-dleq", "secp256kfun-dleq", "jubjub-dleq"] }

serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
bincode = "1.3.3"
serde_json = "1.0.68"
reqwest = { version = "0.11.6", features = ["json"] }

bitcoin = "0.27.1"

# Used for Meros
rust-argon2 = "0.8.3"
bigint = "4.4.3"

digest_auth = "0.3.0"
monero = "0.15.0"

num_cpus = "1.13.0"
nanocurrency-types = { git = "https://github.com/kayabaNerve/nanocurrency-types", version = "0.5.0", rev = "f013c1e" }

zcash_primitives = { git = "https://github.com/kayabaNerve/librustzcash", version = "0.5.0", rev = "b5e2899" }
zcash_proofs = { git = "https://github.com/kayabaNerve/librustzcash", version = "0.5.0", rev = "b5e2899" }
zcash_client_backend = { git = "https://github.com/kayabaNerve/librustzcash", version = "0.5.0", rev = "b5e2899" }

anyhow = "1.0.44"
tokio = { version = "1.13.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.25"

[features]
no_confs = []
test_bitcoin_node = []
test_meros_node = []
test_nano_node = []
test_monero_node = []
test_zcash_node = []

# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3
